# ama-kbb

./: .gitignore  CURRENT_STATE_ANALYSIS.md  IMPLEMENTATION_NOTES.md  LICENSE  README.md  env.example  gradio_ui.py  main.py  pyproject.toml  rag_query.py  requirements.txt  test_artifacts_query.py
kb_builder/: README.md  pyproject.toml
kb_builder/src/kb_builder/: crew.py  main.py
rubrics/: quantum_error_correction.yaml  sustainable_packaging.yaml
src/agents/: researcher.py
src/kbb/: config.py  crew.py  main.py  state.py
src/kbb/config/: agents.yaml  litellm_config.yaml  tasks.yaml
src/kbb/schemas/: __init__.py  models.py
src/kbb/servers/: mcp_serper.py
src/kbb/storage/: __init__.py  artifact_store.py  chroma_store.py
src/kbb/tests/: test_artifacts_query.py
src/kbb/tools/: __init__.py  base.py  chunking.py  cleaning.py  custom_tool.py  fetch.py  mcp_client_manager.py  rubric_loader.py  scrape.py  search.py  shared_llm.py  utils.py
src/kbb/tools/agents/: researcher.py
tests/: test_chunking.py  test_cleaning.py  test_config.py
