[project]
name = "ama-kbb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "chromadb>=1.5.5",
    "mcp>=1.26.0",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
]
