[project]
name = "kbb"
version = "0.1.0"
description = "Autonomous Multi-Agent Knowledge Base Builder for RAG Systems"
authors = [{ name = "Alchemits' Squag 1", email = "squad1@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.12.2",
    "litellm==1.82.6",
    "fastmcp==3.2.0"
]

[project.scripts]
kbb = "kbb.main:run"
run_crew = "kbb.main:run"
train = "kbb.main:train"
replay = "kbb.main:replay"
test = "kbb.main:test"
run_with_trigger = "kbb.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
