[project]
name = "kb_builder"
version = "0.1.0"
description = "kb_builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.1"
]

[project.scripts]
kb_builder = "kb_builder.main:run"
run_crew = "kb_builder.main:run"
train = "kb_builder.main:train"
replay = "kb_builder.main:replay"
test = "kb_builder.main:test"
run_with_trigger = "kb_builder.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
